bk_ida/gccida/g2/emit_store_flag_force
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag_force/src/expmed.c:5129:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag_force/src/expmed.c:5132:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag_force/src/expmed.c:5143:22: error: use of undeclared identifier 'machine_mode'
v11 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)target + 2)); 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_store_flag_force/src/obj/expmed.o] Error 1
